Fix image overflow on guide page.

--- a/public/stylesheets/guide.styl
+++ b/public/stylesheets/guide.styl
@@ -50,3 +50,6 @@ span.game-name
     padding-left .5em
     font-family monospace
 
+.content
+  img
+    max-width 100%
